# walker_6dof_grasping

./: .gitignore  CMakeLists.txt  package.xml  readme.md  setup.py
config/: sim.rviz
data/experiments/22-11-01-11-31-12/: grasps.csv  rounds.csv
data/experiments/22-11-01-11-34-47/: grasps.csv  rounds.csv
data/models/walker2_model/: gpn_conv_1545.pt
data/urdfs/setup/: plane-lz.urdf
data/urdfs/walker2_hand/: Hand_display.urdf  Hand_with_friction.urdf
data/urdfs/walker2_hand/hand_description/: CMakeLists.txt  package.xml  urdf.rviz
data/urdfs/walker2_hand/hand_description/config/: joint_names_walker.yaml
data/urdfs/walker2_hand/hand_description/launch/: display.launch  gazebo.launch
data/urdfs/walkerx_rhand/: HelloWorld.py  hand.urdf  hand_no_mesh.urdf  hand_old.urdf
data/urdfs/walkerx_rhand/meshes/: base.mtl  rfirstfinger1.mtl  rfourthfinger2.mtl
data/urdfs/walkerx_rhand/urdf/: walkerx_rhand.urdf
launch/: grasp_frame_visualization.launch  walker2_hand_rviz.launch
notebooks/: clutter_removal.ipynb
scripts/: construct_dataset.py  generate_data.py  raw_grasp_data_clean.py  sim_grasp.py  test.py  train_gpn.py  vis_sample.py  walker_detection_2cam.py  walker_detection_single_cam.py  walker_mobile_grasping.py
scripts/gre/: raw_reachability_data_clean.py  train_gre.py
src/gpn/: dataset.py  detection.py  grasp.py  gre_dataset.py  gre_networks.py  io.py  networks.py  perception.py  simulation.py  vis.py  vis_gpn.py
src/gpn/experiments/: clutter_removal.py
src/gpn/utils/: btsim.py  o3d_vis.py  ros_utils.py
(+29 files in other folders)
